[package]
name   	= "xtask"
version	= "0.1.0"
edition	= "2021"

[dependencies]
es_rs        	= {path= "..", default-features=false}
helperes     	= {git="https://github.com/eugenesvk/helperes.git"     , tag="0.1.0"}
helperes_proc	= {git="https://github.com/eugenesvk/helperes-proc.git", tag="0.1.0"}
log          	= "0.4"
stderrlog    	= "0.5"
anyhow       	= "1.0"
faccess      	= "0.2"
indoc        	= {version="2.0.4"}
